update paginacion de pagina asistencias

--- a/asistencias.html
+++ b/asistencias.html
@@ -124,6 +124,10 @@
             </table>
         </div>
 
+        <div class="paginacion-asistencias" id="paginacionAsistencias">
+            <!-- Los botones de paginación se generarán dinámicamente -->
+        </div>
+
         <div id="mensajeSinResultados" class="mensaje-sin-resultados" style="display: none;">
             No se encontraron resultados.
         </div>
