update fix de paginacion de asistencias

--- a/asistencias.html
+++ b/asistencias.html
@@ -159,6 +159,9 @@
                     </tbody>
                 </table>
             </div>
+            <div class="paginacion-fichados" id="paginacionFichados">
+                <!-- Los botones de paginación se generarán dinámicamente -->
+            </div>
         </div>
     </div>
 
