update de busqueda y filtros de excel

--- a/asistencias.html
+++ b/asistencias.html
@@ -58,6 +58,13 @@
                             class="input-filtro"
                             style="flex: 1; max-width: none;"
                             placeholder="dd/mm/aaaa"
+                            value="dd/mm/aaaa"
+                        >
+                        <input 
+                            type="date" 
+                            id="excelFiltroFechaCalendario" 
+                            class="input-filtro"
+                            style="max-width: 150px;"
                         >
                         <button 
                             type="button" 
@@ -69,7 +76,7 @@
                         </button>
                     </div>
                     <small style="color: #666; font-size: 12px; margin-top: 5px; display: block;">
-                        Formato: dd/mm/aaaa. Vacío = todas | dd/mm/aaaa = día específico | mm/aaaa = mes completo | aaaa = año completo
+                        Formato: dd/mm/aaaa. Vacío = todas | dd/mm/aaaa = día específico | dd/mm/aaaa (con "dd") = mes completo | mm/aaaa = mes completo | aaaa = año completo
                     </small>
                 </div>
                 <div class="modal-buttons">
