--- a/buscador.html
+++ b/buscador.html
@@ -42,6 +42,7 @@
                         <th>Matrícula</th>
                         <th>Nombre</th>
                         <th>Programa</th>
+                        <th>Fichas</th>
                         <th>Coordinador</th>
                         <th>Acciones</th>
                     </tr>
