--- a/buscador.html
+++ b/buscador.html
@@ -43,6 +43,7 @@
                         <th>Nombre</th>
                         <th>Programa</th>
                         <th>Coordinador</th>
+                        <th>Fichas</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
