update boton de actualizar tabla

--- a/administrador.html
+++ b/administrador.html
@@ -337,6 +337,9 @@
         <div class="modal-content modal-usuarios">
             <button class="btn-cerrar-modal" id="btnCerrarUsuariosPendientes">×</button>
             <h2>Usuarios Pendientes de Aprobación</h2>
+            <div class="usuarios-header">
+                <button class="btn-actualizar-lista" id="btnActualizarListaPendientes">Actualizar lista</button>
+            </div>
             <div class="tabla-usuarios-container">
                 <table class="tabla-usuarios" id="tablaUsuariosPendientes">
                     <thead>
