--- a/administrador.html
+++ b/administrador.html
@@ -229,6 +229,7 @@
                         <option value="maestro">Maestro</option>
                         <option value="alumno">Alumno</option>
                         <option value="servicio social">Servicio Social</option>
+                        <option value="vinculacion">Vinculación</option>
                     </select>
                 </div>
                 <div class="input-group">
