--- a/vinculacionlogin.html
+++ b/vinculacionlogin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Asistencias EDEC</title>
+    <title>Login - Vinculación EDEC</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="login-page">
     <div class="login-container">
-        <h2>Iniciar Sesión - Asistencias</h2>
+        <h2>Iniciar Sesión - Vinculación</h2>
         <form id="loginForm">
             <div class="input-group">
                 <label for="correo">Correo:</label>
@@ -86,6 +86,6 @@
 
     <script src="js/password-toggle.js"></script>
     <script src="js/registro-usuario.js"></script>
-    <script src="js/login_asistencias.js"></script>
+    <script src="js/login_vinculacion.js"></script>
 </body>
 </html>
