update fechas archivos vinculacion

--- a/vinculacion.html
+++ b/vinculacion.html
@@ -37,14 +37,13 @@
         })();
     </script>
     <div class="buscador-container">
-        <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
-        <h1>Vinculación</h1>
-        
-        <div style="margin-bottom: 20px;">
-            <button class="btn-excel" id="btnImportarExcel" style="background: #28a745; color: white;">
+        <div style="position: absolute; top: 20px; right: 20px; display: flex; gap: 10px; align-items: center;">
+            <button class="btn-excel" id="btnImportarExcel" style="background: #28a745; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s; white-space: nowrap;">
                 Importar a Excel
             </button>
+            <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
         </div>
+        <h1>Vinculación</h1>
 
         <!-- Formulario de registro -->
         <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
