update botones vinculacion

--- a/vinculacion.html
+++ b/vinculacion.html
@@ -37,11 +37,9 @@
         })();
     </script>
     <div class="buscador-container">
-        <div style="position: absolute; top: 20px; right: 20px; display: flex; gap: 10px; align-items: center; flex-direction: row; z-index: 1000;">
-            <button class="btn-excel" id="btnImportarExcel" style="background: #28a745; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s; white-space: nowrap; margin: 0;">
-                Importar a Excel
-            </button>
-            <button class="btn-cerrar-sesion" id="btnCerrarSesion" style="position: relative; margin: 0;">Cerrar Sesión</button>
+        <div class="vinculacion-header-buttons">
+            <button class="btn-excel" id="btnImportarExcel">Importar a Excel</button>
+            <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
         </div>
         <h1>Vinculación</h1>
 
