--- a/administrador.html
+++ b/administrador.html
@@ -66,6 +66,10 @@
                 <span class="btn-icon">🎓</span>
                 <span class="btn-text">Alumnos</span>
             </button>
+            <button class="btn-dashboard" id="btnVinculacion" data-url="vinculacion.html">
+                <span class="btn-icon">🔗</span>
+                <span class="btn-text">Registros Vinculación</span>
+            </button>
         </div>
     </div>
 
