--- a/vinculacion.html
+++ b/vinculacion.html
@@ -44,7 +44,7 @@
         <h1>Vinculación</h1>
 
         <!-- Formulario de registro -->
-        <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
+        <div class="formulario-registro-vinculacion" style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
             <h2 style="margin-top: 0; color: #0b0b63;">Registrar Nuevo</h2>
             <form id="formRegistrarVinculacion" style="display: flex; gap: 15px; flex-wrap: wrap; align-items: flex-end;">
                 <div class="input-group" style="flex: 1; min-width: 200px;">
