--- a/asistencias.html
+++ b/asistencias.html
@@ -22,7 +22,11 @@
         })();
     </script>
     <div class="buscador-container">
-        <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
+        <div class="asistencias-header-buttons">
+            <button class="btn-fichados" id="btnFichados">Fichados</button>
+            <button class="btn-excel" id="btnExcel">Importar a Excel</button>
+            <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar</button>
+        </div>
         <h1>Asistencia Apodaca</h1>
         
         <div class="buscador-header">
@@ -34,8 +38,8 @@
                 placeholder="Buscar por matrícula..."
             >
             <button class="btn-buscar" id="btnBuscar">Buscar</button>
-            <button class="btn-fichados" id="btnFichados">Fichados</button>
-            <button class="btn-excel" id="btnExcel">Importar a Excel</button>
+            <button class="btn-fichados" id="btnFichadosDesktop">Fichados</button>
+            <button class="btn-excel" id="btnExcelDesktop">Importar a Excel</button>
         </div>
 
         <!-- Overlay para la ventana flotante -->
