update error en el DOM

--- a/asistencias.html
+++ b/asistencias.html
@@ -25,7 +25,7 @@
         <div class="asistencias-header-buttons">
             <button class="btn-fichados" id="btnFichados">Fichados</button>
             <button class="btn-excel" id="btnExcel">Importar a Excel</button>
-            <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar</button>
+            <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
         </div>
         <h1>Asistencia Apodaca</h1>
         
