update otra vez

--- a/asistencias.html
+++ b/asistencias.html
@@ -24,7 +24,7 @@
     <div class="buscador-container">
         <div class="asistencias-header-buttons">
             <button class="btn-fichados" id="btnFichados">Fichados</button>
-            <button class="btn-excel-mobile" id="btnExcelMobile">Importar a Excel</button>
+            <button class="btn-excel-mobile" id="btnExcelMobile" style="visibility: hidden;">Importar a Excel</button>
             <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
         </div>
         <h1>Asistencia Apodaca</h1>
