update tabla de usuarios en administrador

--- a/administrador.html
+++ b/administrador.html
@@ -351,12 +351,15 @@
                         <tr>
                             <th>Nombre Completo</th>
                             <th>Correo</th>
+                            <th>Rol</th>
+                            <th>Campus</th>
+                            <th>Fecha de Creación</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="tbodyUsuariosPendientes">
                         <tr>
-                            <td colspan="3" style="text-align: center;">Cargando usuarios pendientes...</td>
+                            <td colspan="6" style="text-align: center;">Cargando usuarios pendientes...</td>
                         </tr>
                     </tbody>
                 </table>
