--- a/vinculacion.html
+++ b/vinculacion.html
@@ -118,15 +118,16 @@
             <table class="tabla-asistencias" id="tablaVinculacion">
                 <thead>
                     <tr>
-                        <th>Teléfono</th>
                         <th>Nombre</th>
+                        <th>Teléfono</th>
+                        <th>Programa</th>
                         <th>Fecha</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tbodyVinculacion">
                     <tr>
-                        <td colspan="4" style="text-align: center;">Cargando registros...</td>
+                        <td colspan="5" style="text-align: center;">Cargando registros...</td>
                     </tr>
                 </tbody>
             </table>
