update boton de registradorbarras a administrador

--- a/administrador.html
+++ b/administrador.html
@@ -58,6 +58,10 @@
                 <span class="btn-icon">📝</span>
                 <span class="btn-text">Registrador de Asistencia</span>
             </button>
+            <button class="btn-dashboard" id="btnRegistradorBarras" data-url="registradorbarras.html">
+                <span class="btn-icon">📊</span>
+                <span class="btn-text">Registrador de Barras</span>
+            </button>
             <button class="btn-dashboard" id="btnUsuarios">
                 <span class="btn-icon">👥</span>
                 <span class="btn-text">Usuarios</span>
