update 5 caracteres en registradorbarras

--- a/registradorbarras.html
+++ b/registradorbarras.html
@@ -26,7 +26,7 @@
     <div class="asistencia-container-barras">
         <img src="images/logo.png" alt="Logo" class="logo">
         <h2 class="titulo-registrador-barras">Registrador Asistencias</h2>
-        <input type="text" id="codigoBarrasInput" class="input-codigo-barras" placeholder="Escanea el código de barras" autofocus>
+        <input type="text" id="codigoBarrasInput" class="input-codigo-barras" placeholder="Escanea el código de barras" maxlength="5" autofocus>
         <div id="mensajeExito" class="mensaje-exito-barras">¡Asistencia registrada!</div>
         <div id="mensajeError" class="mensaje-error-barras">Error de asistencia.</div>
     </div>
