--- a/administrador.html
+++ b/administrador.html
@@ -363,7 +363,7 @@
                     </thead>
                     <tbody id="tbodyUsuariosPendientes">
                         <tr>
-                            <td colspan="6" style="text-align: center;">Cargando usuarios pendientes...</td>
+                            <td colspan="6" style="text-align: center;">Cargando usuarios pendientes....</td>
                         </tr>
                     </tbody>
                 </table>
